--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -432,6 +432,15 @@
                     .kr-sg-input-text{
                         margin: 30px 0;
                         width: 200px;
+                        .button-text-count{
+                            position: absolute;
+                            right: -28px;
+                            color: #202124;
+                            bottom: -3px;
+                            font-weight: normal;
+                            font-size: 12px;
+                            line-height: 18px;
+                        }
                         .label-text{
                             color: #202124;
                             font-style: normal;
@@ -727,6 +736,12 @@
         .kr-sg-input-search{
             width: 700px;
             margin-right: 15px;
+            .inside-input-btn{
+                position: absolute;
+                top: 3px;
+                right: 4px;
+                height: 28px;
+            }
             .placeholder-text{                
                 position: absolute;
                 left: 36px;
