--- a/findly-builder/src/app/components/search-experience/search-experience.component.scss
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.scss
@@ -228,6 +228,12 @@
                     .kr-sg-input-search{
                         width: 700px;
                         margin-right: 15px;
+                        .inside-input-btn{
+                            position: absolute;
+                            top: 3px;
+                            right: 4px;
+                            height: 28px;
+                        }
                         .placeholder-custom-search{
                             position: absolute;                         
                             width: 200px;                            
