--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1345,9 +1345,9 @@ float: right;
 .sdk-top-down-interface .conversation-container {
   position: absolute;
   height: auto;
-  right: 0;
-  top: 57px;
-  z-index: 1200;
+  right: 25px;
+  top: 85px;
+  z-index: 999990;
   background: #FFFFFF;
   box-shadow: -7px 4px 30px rgb(18 61 101 / 10%), inset -8px -6px 80px rgb(255 255 255 / 18%);
   border-radius: 4px;
@@ -1466,6 +1466,9 @@ float: right;
 }
 .sdk-top-down-interface .conversation-container .conversations .search-container.conversation #searchChatContainer .messageBubble .userMessage span{
   color: #C57400;
+}
+.sdk-top-down-interface .conversation-container .conversations .search-container.conversation #searchChatContainer .messageBubble .botMessage .bot_Img{
+  display: none;
 }
 /* action container  */
 .sdk-top-down-interface .actions {
@@ -2025,7 +2028,7 @@ background:none !important;
     bottom: 0px;
 }
 
-.sdk-top-down-interface .top-down-wrapper {
+.sdk-top-down-interface .top-down-wrapper.top-down-wrapper-height {
   width: 100%;
   height: 100%;
   }
@@ -2039,7 +2042,7 @@ a{
 }
 /*style="color :searchConfig.searchBarPlaceholderTextColor !important;"*/
 
- .topdown-search-main-container .search-input-box .search-box-container-data .cancel-search {
+.top-down-search-background-div .topdown-search-main-container .search-input-box .search-box-container-data .cancel-search {
   top: -30px;
 }
 
@@ -2074,4 +2077,8 @@ a{
 }
 .sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container{
   display: block;
+}
+
+.sdk-top-down-interface .conversation-container .conversations .search-container.conversation #searchChatContainer .finalResults{
+  display:none !important;
 }
