--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -222,9 +222,10 @@
             <div *ngIf= "(selectedSourceType.resourceType === 'webdomain')">
               <div class="kr-sg-input-text mb-4">
                 <div class="label-text">Source URL</div>
-                <input type="text" autocomplete="off" name="url" (keyup)="urlChange()" (change)="urlChange()"
+                <input type="text" id="extractUrl" autocomplete="off" name="url" (keyup)="urlChange()" (change)="urlChange()"
                   [disabled]="fileObj.fileId || fileObj.fileName" placeholder="Enter Domain URL"
-                  [(ngModel)]="newSourceObj.url" class="input-text">
+                  [(ngModel)]="newSourceObj.url" class="input-text" (change)="inputChanged('extractURL')">
+                  <img id="infoWarning1" src="assets/icons/warning_escalation.svg" style="display: none;" height="12" width="12" />
               </div>
             </div>
             <div class="kr-sg-input-text mb-4">
