range slider changes done

--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -423,7 +423,7 @@
                             <div class="label_text">{{data.name}}</div>
                             <div class="kr-sg-toggle sliderContainer">  
                                 <div class="range-slider">
-                                <app-range-slider [customClass]='"querySlider"' [allData]='data.sliderObj' (valueEvent)="valueEvent(data.name,$event)"></app-range-slider>
+                                <app-range-slider-search-experience [customClass]='"querySlider"' [allData]='data.sliderObj' (valueEvent)="valueEvent(data.name,$event)"></app-range-slider-search-experience>
                             </div></div>
                         </div>
 
